<resources>
    <string name="app_name">Best Price</string>
    <string name="default_web_client_id" translatable="false">webClientId.apps.googleusercontent.com</string>
    <string name="action_refresh_login">Refresh login</string>
    <string name="product_name">Name:</string>
    <string name="input_product_name_here">Input product name here</string>
    <string name="action_search">Search</string>
    <string name="search_hint">UPC or product name</string>
    <string name="search_empty_hint">Please enter UPC or product name</string>
    <string name="explore">Explore</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">Sign out</string>

    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_food">Food</string>
    <string name="cat_drink">Drink</string>
    <string name="cat_home">Home</string>
    <string name="cat_wellness">Wellness</string>
    <string name="cat_office">Office</string>

    <string name="action_done">action_done</string>
    <string name="upc">Barcode:</string>
    <string name="name">Name:</string>
    <string name="input_upc_code">Input UPC barcode</string>
    <string name="category">Category:</string>
    <string name="recommended_store">Recommended Store:</string>
    <string name="view_all_stores">View All Stores</string>
    <string name="select">Select..</string>
    <string name="price">Price:</string>
    <string name="dollar_sign">$</string>
    <string name="store">Prices in all stores:</string>
    <string name="todo">TODO</string>
    <string name="popup_category">Category</string>
    <string name="pop_cat_cancel">Cancel</string>
    <string name="best_price">Best Price:</string>

</resources>
