<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="15.66dp"
        android:paddingBottom="15.66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="25.77dp"
                android:text="@string/popup_category"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="363dp">

            <Button
                android:id="@+id/pop_cat_button_0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_electronics"
                android:drawablePadding="20.77dp"
                android:gravity="start|center_vertical"
                android:paddingStart="25.77dp"
                android:text="@string/cat_entertainment"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/pop_cat_button_1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_food"
                android:drawablePadding="20.77dp"
                android:gravity="start|center_vertical"
                android:paddingStart="25.77dp"
                android:text="@string/cat_food"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/pop_cat_button_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_drinks"
                android:drawablePadding="20.77dp"
                android:gravity="start|center_vertical"
                android:paddingStart="25.77dp"
                android:text="@string/cat_drink"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/pop_cat_button_3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_cleaning"
                android:drawablePadding="20.77dp"
                android:gravity="start|center_vertical"
                android:paddingStart="25.77dp"
                android:text="@string/cat_home"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/pop_cat_button_4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_pharmacy"
                android:drawablePadding="20.77dp"
                android:gravity="start|center_vertical"
                android:paddingStart="25.77dp"
                android:text="@string/cat_wellness"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/pop_cat_button_5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_office"
                android:drawablePadding="20.77dp"
                android:gravity="start|center_vertical"
                android:paddingStart="25.77dp"
                android:text="@string/cat_office"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingEnd="25.77dp">

            <Button
                android:id="@+id/pop_cat_button_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/pop_cat_cancel"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorButtonBlue"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>